--- a/client/src/app/components/pager-header.component.html
+++ b/client/src/app/components/pager-header.component.html
@@ -1,15 +1,24 @@
 <header>
-  <span *ngIf="totalCount && totalCount > 0">
+  <div class="row">
+    <div class="col-6">
+      <!-- -->
+    </div>
+    <div class="col-6 d-flex justify-content-end py-1">
+    <span *ngIf="totalCount && totalCount > 0">
       Showing 
-      <strong>
-          {{ ((pageNumber-1) * pageSize) + 1 }} -
-          {{ pageNumber * pageSize
-              > this.totalCount 
-              ? this.totalCount
-              : pageNumber*pageSize
-          }}
-      </strong> of <strong>{{ totalCount }}</strong> Results</span>
-      <span *ngIf="totalCount === 0">
-        There are <strong>0</strong> results for this filter
-      </span>
+        <strong>
+            {{ ((pageNumber-1) * pageSize) + 1 }} -
+            {{ pageNumber * pageSize
+                > this.totalCount 
+                ? this.totalCount
+                : pageNumber*pageSize
+            }}
+        </strong> 
+      of <strong>{{ totalCount }}</strong> Results
+    </span>
+    <span *ngIf="totalCount === 0">
+          There are <strong>0</strong> results for this filter
+    </span>
+    </div>
+  </div>
 </header>
