--- a/client/src/app/components/product-item.component.html
+++ b/client/src/app/components/product-item.component.html
@@ -1,18 +1,24 @@
-<div class="card mb-4 shadow-sm" style="height: 28rem;">
-  <div style="min-height: 12rem;">
+<div class="card mb-4 shadow-sm" >
+  <!-- style="height: 28rem;" -->
+  <div >
+    <!-- style="min-height: 12rem;" -->
     <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
   </div>
   <div class="card-body">
     <a routerLink="/shop/{{ product.id }}">
       <h6 class="card-title">{{ product.name }}</h6>
     </a>
-    <small class="text-muted">{{ product.productBrand }}</small>
+    <div class="d-flex justify-content-between">
+      <small class="text-muted">{{ product.productBrand }}</small>
+      <small class="text-muted">{{ product.price | currency }}</small>
+    </div>
+    
     <p class="card-text">{{ product.description }}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
-        <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+        <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button> -->
       </div>
-      <small class="text-muted">{{ product.price | currency }}</small>
+      <!-- <small class="text-muted">{{ product.price | currency }}</small> -->
     </div>
   </div>
 </div>
