--- a/client/src/app/pages/shop/product/product.page.html
+++ b/client/src/app/pages/shop/product/product.page.html
@@ -1,3 +1,6 @@
+<style>
+  .circle-q { cursor: pointer; font-size: 1rem; }
+</style>
 <section class="container" >
   <div class="row pt-5 pb-2 d-flex justify-content-end" *ngIf="($breadcrumb | async) as breadcrumbs">
     <xng-breadcrumb></xng-breadcrumb>
@@ -10,10 +13,12 @@
       <h4>{{ product.name }}</h4>
       <p>{{ product.description }}</p>
       <div>
-        <i class="fa fa-minus-circle mr-2" style="cursor: pointer; font-size: 1rem;"></i>
-        <span class="font-weight-bold" style="font-size: 1rem;">2</span>
-        <i class="fa fa-plus-circle mx-2" style="cursor: pointer; font-size: 1rem;"></i>
-        <button class="btn btn-outline-secondary ml-4">Add to Cart</button>
+        <i class="fa fa-minus-circle mr-2 circle-q" (click)="decrementQuantity()"></i>
+        <span class="font-weight-bold" style="font-size: 1rem;">
+          {{ quantity }}
+        </span>
+        <i class="fa fa-plus-circle mx-2 circle-q" (click)="incrementQuantity()"></i>
+        <button class="btn btn-outline-secondary ml-4" (click)="addItemToBasket()">Add to Cart</button>
       </div>
     </div>
   </div>
