S8 ng auth form

--- a/client/src/app/pages/basket/basket.page.html
+++ b/client/src/app/pages/basket/basket.page.html
@@ -52,7 +52,7 @@
           <!-- order totals -->
           <basket-total></basket-total>
           <div class="d-flex justify-content-end">
-          <a class="btn btn-primary text-white py-2 btn-sm">
+          <a class="btn btn-primary text-white py-2 btn-sm" routerLink="/basket/checkout">
             Checkout
           </a>
         </div>
