--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -47,7 +47,7 @@
       </ng-container>
       <ng-container *ngIf="$currentUser | async as currentUser">
         <div class="dropdown ml-3 mr-5" dropdown>
-          <a class="dropdown-toggle" style="cursor: pointer" dropdownToggle>
+          <a class="dropdown-toggle text-white" style="cursor: pointer" dropdownToggle>
             <strong>Welcome {{ currentUser.displayName }}</strong>  
           </a>
           <div class="dropdown-menu dropdown-menu-right" style="cursor: pointer;" *dropdownMenu>
