--- a/client/src/app/pages/account/login/login.page.html
+++ b/client/src/app/pages/account/login/login.page.html
@@ -5,8 +5,8 @@
       <div class="text-center mb-4">
         <h1 class="h3 mb-3 font-weight-normal">Login</h1>
       </div>
-      <account-text formControlName="email" [label]="'Email Address'"></account-text>
-      <account-text formControlName="password" [label]="'Password'" [type]="'password'"></account-text>   
+      <app-text formControlName="email" [label]="'Email Address'"></app-text>
+      <app-text formControlName="password" [label]="'Password'" [type]="'password'"></app-text>   
       <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
   </div>
