--- a/client/src/app/pages/account/register/register.page.html
+++ b/client/src/app/pages/account/register/register.page.html
@@ -5,9 +5,9 @@
         <h1 class="h3 mb-3 font-weight-normal">Register</h1>
       </div>
 
-      <account-text formControlName="displayName" [label]="'Display Name'"></account-text>
-      <account-text formControlName="email" [label]="'Email Address'"></account-text>
-      <account-text formControlName="password" [label]="'Password'" [type]="'password'"></account-text>
+      <app-text formControlName="displayName" [label]="'Display Name'"></app-text>
+      <app-text formControlName="email" [label]="'Email Address'"></app-text>
+      <app-text formControlName="password" [label]="'Password'" [type]="'password'"></app-text>
      
       <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     </form>
