--- a/client/src/app/pages/basket/basket.page.html
+++ b/client/src/app/pages/basket/basket.page.html
@@ -9,42 +9,12 @@
     <div *ngIf="$basket | async as basket">
       <div class="row mb-4">
         <div class="col-md-12">
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Product</th>
-                  <th>Price</th>
-                  <th>Quantity</th>
-                  <th>Total</th>
-                  <th>-</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let item of basket.items">
-                  <th>
-                    <div>
-                      <div>
-                        <a routerLink="/shop/{{ item.id }}">{{ item.productName }}</a>
-                      </div>
-                    </div>
-                  </th>
-                  <td>{{ item.price | currency }}</td>
-                  <td class="align-middle">
-                    <div class="d-flex align-items-center">
-                      <i class="fa fa-minus-circle mr-2 circle-q" (click)="decrementQuantity(item)"></i>
-                      <span>{{ item.quantity }}</span>
-                      <i class="fa fa-plus-circle mx-2 circle-q" (click)="incrementQuantity(item)"></i>
-                    </div>
-                  </td>
-                  <td>{{ item.price * item.quantity | currency }}</td>
-                  <td>
-                    <i class="fa fa-trash" (click)="removeBasketItem(item)" style="cursor: pointer;"></i>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <basket-summary
+            (decrement)="decrementQuantity($event)"
+            (increment)="incrementQuantity($event)"
+            (remove)="removeBasketItem($event)"
+          >
+          </basket-summary>
         </div>
       </div>
       <div class="row">
