--- a/client/src/app/pages/basket/checkout/address/address.component.html
+++ b/client/src/app/pages/basket/checkout/address/address.component.html
@@ -1,14 +1,14 @@
 <div class="mt-4" [formGroup]="checkoutForm">
   <div class="d-flex justify-content-between align-items-center">
       <h4>Shipping address</h4>
-      <!--  
+      <!--  -->
       <button 
-          (click)="saveUserAddress()" 
-          [disabled]="!checkoutForm.get('addressForm').valid || !checkoutForm.get('addressForm').dirty"
-          class="btn btn-primary-success mb-3">
-          Save as default address
+        (click)="saveUserAddress()" 
+        [disabled]="!checkoutForm.get('addressForm').valid || !checkoutForm.get('addressForm').dirty"
+        class="btn btn-primary-success mb-3"
+      >
+        Save as default address
       </button>
-      -->
   </div>
   <div class="row" formGroupName="addressForm">
       <div class="form-group col-6">
