--- a/client/src/app/components/basket-summary.component.html
+++ b/client/src/app/components/basket-summary.component.html
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of ($basket | async).items">
+        <tr *ngFor="let item of items">
           <th>
             <div>
               <div>
