--- a/client/src/app/components/basket-total.component.html
+++ b/client/src/app/components/basket-total.component.html
@@ -2,18 +2,18 @@
 
 <div class="px-4 py-2">
   <small class="font-italic">Shipping costs will be added depending on choices made during checkout</small>
-  <ul class="list-unstyled mb-2" *ngIf="$basketTotal | async as basket">
+  <ul class="list-unstyled mb-2">
     <li class="d-flex justify-content-between py-3 border-bottom">
       <strong class="text-muted">Order subtotal</strong>
-      <strong>{{ basket.subtotal | currency }}</strong>
+      <strong>{{ subtotal | currency }}</strong>
     </li>
     <li class="d-flex justify-content-between py-3 border-bottom">
       <strong class="text-muted">Shipping and handling</strong>
-      <strong>{{ basket.shipping | currency }}</strong>
+      <strong>{{ shippingPrice | currency }}</strong>
     </li>
     <li class="d-flex justify-content-between py-3 border-bottom">
       <strong class="text-muted">Total</strong>
-      <strong>{{ basket.total | currency }}</strong>
+      <strong>{{ total | currency }}</strong>
     </li>
   </ul>
 </div>
