--- a/client/src/app/pages/basket/checkout/delivery/delivery.component.html
+++ b/client/src/app/pages/basket/checkout/delivery/delivery.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
-  <button class="btn btn-outline-primary" cdkStepperPrevious>
+  <button class="btn btn-primary" cdkStepperPrevious>
       <i class="fa fa-angle-left"></i> Back to Address
   </button>
   <button class="btn btn-primary" cdkStepperNext>
