--- a/client/src/app/pages/account/login/login.page.html
+++ b/client/src/app/pages/account/login/login.page.html
@@ -8,6 +8,7 @@
       <app-text formControlName="email" [label]="'Email Address'"></app-text>
       <app-text formControlName="password" [label]="'Password'" [type]="'password'"></app-text>   
       <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-block" type="submit" (click)="logAsGuest()">LogIn as Guest</button>
     </form>
   </div>
 </div>
